--- a/media_kit_test/android/app/src/main/AndroidManifest.xml
+++ b/media_kit_test/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
         android:label="media_kit_test"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+             android:name="io.flutter.embedding.android.EnableImpeller"
+             android:value="false" 
+        />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -31,6 +35,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
          https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
