feat: linux aarch64 support

--- a/media_kit_video/linux/CMakeLists.txt
+++ b/media_kit_video/linux/CMakeLists.txt
@@ -20,9 +20,29 @@ set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 set(CMAKE_INSTALL_RPATH "$ORIGIN")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-set(LIBMPV_ZIP_URL "https://github.com/Predidit/libmpv-linux-build/releases/download/2024120614/libmpv_x86_64.zip")
-set(LIBMPV_ZIP_PATH "${CMAKE_BINARY_DIR}/libmpv_x86_64.zip")
-set(LIBMPV_ZIP_MD5 "b31f6d3adcdcb7a58793144887584493")
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|amd64|AMD64")
+  set(ARCH_NAME "x86_64")
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64|ARM64")
+  set(ARCH_NAME "aarch64")
+else()
+  message(FATAL_ERROR "Unsupported architecture: ${CMAKE_SYSTEM_PROCESSOR}")
+endif()
+
+message(STATUS "Detected architecture: ${ARCH_NAME}")
+
+if(ARCH_NAME STREQUAL "x86_64")
+  set(LIBMPV_ZIP_URL "https://github.com/Predidit/libmpv-linux-build/releases/download/20251019/libmpv_x86_64.zip")
+  set(LIBMPV_ZIP_SHA256 "2a163263a6f3d1369c716d5f7bfd95330e45268608a8b74427826a91b046b170")
+  set(LIBMPV_HEADER_ZIP_URL "https://github.com/Predidit/libmpv-linux-build/releases/download/20251019/libmpv_x86_64_header.zip")
+  set(LIBMPV_HEADER_ZIP_SHA256 "f9391495bade1d0666ff187a5abaeefc17f8db972a4be1c112aefc7b93b15f8e")
+elseif(ARCH_NAME STREQUAL "aarch64")
+  set(LIBMPV_ZIP_URL "https://github.com/Predidit/libmpv-linux-build/releases/download/20251019/libmpv_aarch64.zip")
+  set(LIBMPV_ZIP_SHA256 "99b0ee63aa35eed3e69bc4eda2409ca6ee3987a382d84c65582c0d42834fc6a9")
+  set(LIBMPV_HEADER_ZIP_URL "https://github.com/Predidit/libmpv-linux-build/releases/download/20251019/libmpv_aarch64_header.zip")
+  set(LIBMPV_HEADER_ZIP_SHA256 "f7493da4e800928c95f6c3f91ad0050d7009ad3805d65fb3c943d27780a5240c")
+endif()
+
+set(LIBMPV_ZIP_PATH "${CMAKE_BINARY_DIR}/libmpv_${ARCH_NAME}.zip")
 set(LIBMPV_UNZIP_DIR "${CMAKE_BINARY_DIR}/mpv")
 
 make_directory("${LIBMPV_UNZIP_DIR}") 
@@ -38,12 +58,12 @@ else()
   message(STATUS "libmpv download completed.")
 endif()
 
-message(STATUS "Verifying MD5 checksum for ${LIBMPV_ZIP_PATH}")
-file(MD5 ${LIBMPV_ZIP_PATH} computed_md5)
-if(NOT computed_md5 STREQUAL "${LIBMPV_ZIP_MD5}")
-  message(FATAL_ERROR "MD5 checksum mismatch! Expected: ${LIBMPV_ZIP_MD5}, Got: ${computed_md5}")
+message(STATUS "Verifying SHA256 checksum for ${LIBMPV_ZIP_PATH}")
+file(SHA256 ${LIBMPV_ZIP_PATH} computed_sha256)
+if(NOT computed_sha256 STREQUAL "${LIBMPV_ZIP_SHA256}")
+  message(FATAL_ERROR "SHA256 checksum mismatch! Expected: ${LIBMPV_ZIP_SHA256}, Got: ${computed_sha256}")
 else()
-  message(STATUS "MD5 checksum verification passed.")
+  message(STATUS "SHA256 checksum verification passed.")
 endif()
 
 message(STATUS "unzip libmpv to ${LIBMPV_UNZIP_DIR}")
@@ -67,8 +87,7 @@ else()
   message(FATAL_ERROR "libmpv.so.2 not founded ${LIBMPV_PATH}")
 endif()
 
-set(LIBMPV_HEADER_ZIP_URL "https://github.com/Predidit/libmpv-linux-build/releases/download/2024120614/libmpv_x86_64_header.zip")
-set(LIBMPV_HEADER_ZIP_PATH "${CMAKE_BINARY_DIR}/libmpv_x86_64_header.zip")
+set(LIBMPV_HEADER_ZIP_PATH "${CMAKE_BINARY_DIR}/libmpv_${ARCH_NAME}_header.zip")
 set(LIBMPV_HEADER_UNZIP_DIR "${CMAKE_BINARY_DIR}/mpv/include")
 
 message(STATUS "downloading libmpv header from ${LIBMPV_HEADER_ZIP_URL} to ${LIBMPV_HEADER_ZIP_PATH}")
@@ -79,6 +98,14 @@ if(NOT download_status_code EQUAL 0)
   message(FATAL_ERROR "libmpv header download failed. err: ${download_status_code}")
 else()
   message(STATUS "libmpv header download completed.")
+endif()
+
+message(STATUS "Verifying SHA256 checksum for ${LIBMPV_HEADER_ZIP_PATH}")
+file(SHA256 ${LIBMPV_HEADER_ZIP_PATH} computed_header_sha256)
+if(NOT computed_header_sha256 STREQUAL "${LIBMPV_HEADER_ZIP_SHA256}")
+  message(FATAL_ERROR "SHA256 checksum mismatch! Expected: ${LIBMPV_HEADER_ZIP_SHA256}, Got: ${computed_header_sha256}")
+else()
+  message(STATUS "SHA256 checksum verification passed.")
 endif()
 
 message(STATUS "unzip libmpv header to ${LIBMPV_HEADER_UNZIP_DIR}")
